2016-06-29  Carl Hetherington  <cth@carlh.net>

	* Obey specified colour conversion when previewing
	RGB and XYZ JPEG2000 files.

2016-06-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.14 released.

2016-06-24  c.hetherington  <cth@carlh.net>

	* Try again to make new file dialogue bigger on some platforms
	(#902).

2016-06-24  c.hetherington  <cth@carlh.net>

	* Support underlined subtitles.

2016-06-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.13 released.

2016-06-21  Carl Hetherington  <cth@carlh.net>

	* Make new file dialogue bigger on some platforms (#902).

2016-06-20  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix display of italic and bold font names in the fonts
	dialogue.

	* Updated pt_BR translation from Max M. Fuhlendorf.

	* Fix various strange crashes with encoding servers.

2016-06-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.12 released.

2016-06-19  Carl Hetherington  <cth@carlh.net>

	* Fix preview of bold subtitles.

	* Updated pt_BR translation from Max M. Fuhlendorf.

	* Version 2.8.11 released.

2016-06-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.10 released.

2016-06-17  Carl Hetherington  <cth@carlh.net>

	* Add configurable default for the number of DCP
	audio channels (#897).

2016-06-16  Carl Hetherington  <cth@carlh.net>

	* Ignore any hidden files when looking for image files.

	* Remove seconds from KDM time period specification (#819).

2016-06-14  c.hetherington  <cth@carlh.net>

	* Basic guessing of audio channels from filenames (#393).

	* Fix incorrectly-reported frame rate when importing
	3D DCPs.

	* Select correct video frame type when importing DCPs (part of #806).

2016-06-13  Carl Hetherington  <cth@carlh.net>

	* Give better error messages when subtitles fail to load.

2016-06-13  c.hetherington  <cth@carlh.net>

	* Add 3D video frame type for 3D DCP inputs (#806).

	* Add button to move things to the start of reels (#798).
